--- a/frontend/css/styles.scss
+++ b/frontend/css/styles.scss
@@ -1,6 +1,7 @@
 @import '../css/modules/fonts.scss';
 @import '../css/modules/variables.scss';
 @import '../css/modules/modals.scss';
+@import '../css/modules/landingpage.scss';
 @import '../css/modules/nav.scss';
 @import '../css/modules/index.scss';
 @import '../css/modules/shop.scss';
@@ -16,37 +17,37 @@
     padding: 0;
 }
 
-h1{
+h1 {
     margin: 0;
 }
 
-h2{
-    margin: 0;   
+h2 {
+    margin: 0;
 }
 
-h3{
-    margin: 0;   
+h3 {
+    margin: 0;
 }
 
-h4{
-    margin: 0;   
-    font-family: $jakarta;
-}
-
-h5{
-    margin: 0;   
-}
-
-h6{
-    margin: 0;    
-}
-
-p{
+h4 {
     margin: 0;
     font-family: $jakarta;
 }
 
-header{
+h5 {
+    margin: 0;
+}
+
+h6 {
+    margin: 0;
+}
+
+p {
+    margin: 0;
+    font-family: $jakarta;
+}
+
+header {
     height: 100px;
     border-bottom: solid $blue 2px;
     width: 100%;
@@ -56,18 +57,20 @@ header{
     justify-content: space-between;
 }
 
-.header-title{
+.header-title {
     color: $blue;
     margin-left: 5%;
 }
 
-.filer{
+.filer {
     margin-right: 5%;
-position: relative;
-    span{
+    position: relative;
+
+    span {
         margin-left: 5px;
     }
-    button{
+
+    button {
         width: 135px;
         all: unset;
         color: $white;
@@ -77,7 +80,7 @@ position: relative;
     }
 }
 
-.filter-dropdown{
+.filter-dropdown {
     background: $blue;
     color: $white;
     position: absolute;
@@ -86,10 +89,12 @@ position: relative;
     max-height: 0px;
     overflow: hidden;
     transition: .2s ease;
-    ul{
+
+    ul {
         padding: 0 10px;
     }
-    li{
+
+    li {
         list-style: none;
         border-bottom: solid 1px $white;
         display: flex;
@@ -97,7 +102,7 @@ position: relative;
     }
 }
 
-.filter-expand{
-max-height: 91px!important;
-transition: .2s ease;
+.filter-expand {
+    max-height: 91px !important;
+    transition: .2s ease;
 }
