--- a/frontend/css/modules/_landingpage.scss
+++ b/frontend/css/modules/_landingpage.scss
@@ -81,80 +81,222 @@
     @include flex-column;
 
     .gallery {
+        @include flex-column;
         padding: 20px;
 
-    }
-
-    #gallery0 {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(1, 1fr);
-        gap: 5px;
-
-        .product-container {
-            width: 100%;
-            height: 400px;
-            background-color: white;
-            border: 2px solid rgb(67, 60, 60);
-            font-size: 12px;
-            text-align: center;
-            margin: 0;
-
-            img {
-                width: 100px;
-                height: auto;
-                object-fit: cover;
-            }
-        }
-    }
-
-    #gallery1 {
-        @include flex-column;
-
-        .product-container {
-            width: 100%;
-            height: 400px;
-            background-color: white;
-            border: 2px solid rgb(67, 60, 60);
-            font-size: 12px;
-            text-align: center;
-            margin: 0;
-
-            img {
-                width: 100px;
-                height: auto;
-                object-fit: cover;
-            }
-        }
-    }
-
-    #gallery2 {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        gap: 5px;
-
-        .product-container {
-
-            width: 100%;
-            height: 400px;
-            background-color: white;
-            border: 2px solid rgb(67, 60, 60);
-            font-size: 12px;
-            text-align: center;
-            margin: 0;
-
-            img {
-                width: 100px;
-                height: auto;
-                object-fit: cover;
-            }
+        h6 {
+            font-family: $jakarta;
+            font-size: 25px;
+            font-weight: 600;
+            margin: 10px 0px;
+            text-transform: capitalize;
+            letter-spacing: 1px;
+            line-height: 50px;
+            border-bottom: 2px solid $blue;
         }
 
-        .product-container:nth-child(1) {
-            grid-column-start: 1;
-            grid-column-end: 3;
+        #gallery0 {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(1, 1fr);
+            gap: 5px;
 
+            .product-container {
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                grid-row: span 1;
+
+                .product-item {
+                    width: 100%;
+                    height: 400px;
+                    position: relative;
+                    padding-bottom: 50px;
+                    background: $white;
+
+                    .product-image {
+                        width: 100%;
+                        height: 100%;
+                        overflow: hidden;
+                    }
+                }
+
+                .product-description {
+                    height: 50px;
+                    width: 100%;
+                    display: flex;
+                    bottom: 0;
+                    align-items: flex-start;
+                    justify-content: center;
+                    padding: 0 42px 0 6px;
+                    position: absolute;
+                    flex-direction: column;
+
+                    h4 {
+                        font-size: calc(.8em + .3vw);
+                        font-weight: 200;
+                        color: $blue;
+                    }
+
+                    p {
+                        font-size: .7em;
+                        font-weight: 100;
+                        color: $green;
+                    }
+                }
+
+                #favourite {
+                    position: absolute;
+                    top: 11px;
+                    bottom: 11px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    right: 6px;
+                    justify-content: center;
+
+                    h3 {
+                        font-family: "Plus Jakarta Sans", sans-serif;
+                        font-size: 1em;
+                        font-weight: 300;
+                        color: $blue;
+                    }
+                }
+            }
+        }
+
+        #gallery1 {
+            @include flex-column;
+            gap: 50px;
+
+            .product-container {
+                position: relative;
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                grid-row: span 1;
+
+
+                .product-item {
+                    width: 100%;
+                    height: 400px;
+                    position: relative;
+                    padding-bottom: 0;
+                    background: $white;
+
+                    .product-image {
+                        width: 100%;
+                        height: 100%;
+                        overflow: hidden;
+                    }
+                }
+
+                .product-logo {
+                    position: absolute;
+                    top: 120px;
+                    left: 120px;
+
+                    img {
+                        width: 150px;
+                        height: 150px;
+                    }
+                }
+            }
+        }
+
+        #gallery2 {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            gap: 5px;
+
+            .product-container {
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                grid-row: span 1;
+
+                .product-item {
+                    width: 100%;
+                    height: 400px;
+                    position: relative;
+                    padding-bottom: 50px;
+                    background: $white;
+
+                    .product-image {
+                        width: 100%;
+                        height: 100%;
+                        overflow: hidden;
+                    }
+                }
+
+                .product-description {
+                    height: 50px;
+                    width: 100%;
+                    display: flex;
+                    bottom: 0;
+                    align-items: flex-start;
+                    justify-content: center;
+                    padding: 0 42px 0 6px;
+                    position: absolute;
+                    flex-direction: column;
+
+                    h4 {
+                        font-size: calc(.8em + .3vw);
+                        font-weight: 200;
+                        color: $blue;
+                    }
+
+                    p {
+                        font-size: .7em;
+                        font-weight: 100;
+                        color: $green;
+                    }
+                }
+
+                #favourite {
+                    position: absolute;
+                    top: 11px;
+                    bottom: 11px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    right: 6px;
+                    justify-content: center;
+
+                    h3 {
+                        font-family: "Plus Jakarta Sans", sans-serif;
+                        font-size: 1em;
+                        font-weight: 300;
+                        color: $blue;
+                    }
+                }
+            }
+
+            .product-container:nth-child(1) {
+                grid-column-start: 1;
+                grid-column-end: 3;
+
+            }
+        }
+
+        .gallery-button {
+            padding: 10px 0;
+            @include flex-row;
+            align-items: center;
+            justify-content: flex-end;
+
+            button {
+                border: none;
+                background-color: $blue;
+                color: $white;
+                font-size: 15px;
+                font-family: $jakarta;
+                font-weight: 500;
+                text-transform: capitalize;
+                letter-spacing: 1px;
+                padding: 10px 30px;
+            }
         }
     }
 }
