fixed merge issues

--- a/frontend/css/modules/_modals.scss
+++ b/frontend/css/modules/_modals.scss
@@ -217,9 +217,9 @@ label {
 //   }
 // }
 
-.modal-backdrop {
-  z-index: 0;
-}
+// .modal-backdrop {
+//   z-index: 0;
+// }
 
 // DELETE MODAL  -------------------------------------------------------------------
 
